2005-08-21  Gustavo Noronha Silva  <kov@debian.org>

	* gnome-panel-screenshot.c:
	- fix typo in variable name "filename" -> "file_name"

2005-08-21  Kang Jeong-Hee <Keizi@mail.co.kr>

	* gnome-panel-screenshot.c, screenshot-dialog.c: Fix wrong order
	of filename charset conversion.

Sun Jul 17 15:04:13 2005  Jonathan Blandford  <jrb@redhat.com>

	* gnome-panel-screenshot.c: (prepare_screenshot), (load_options):
	* screenshot-shadow.c: (create_outline_filter), (create_effect),
	(screenshot_add_shadow), (screenshot_add_border): *
	screenshot-shadow.h: Patch from Emmanuel Pacaud
	<emmanuel.pacaud@univ-poitiers.fr> to clean up the shadow drawing
	code, #169248.

2005-05-16  Olav Vitters <olav@bkor.dhs.org>

	* gnome-panel-screenshot.c: Fix typo in gconf key (gnome_screenshot
	instead of gnome-screenshot). Fixes bug #303891. Patch by Trent
	"Lathiat" Lloyd.

2005-01-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* screenshot-dialog.c: mark a string for translation, remove an
	unnecessary function call

2004-12-22  Vincent Noel  <vnoel@cox.net>

	* gnome-panel-screenshot.c (main, prepare_screenshot_timeout):
	When called with --delay, call gtk_main() otherwise the g_timeout
	is never called. Fixes bug #161461.

2004-12-21  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-screenshot.glade:  Use proper HIG spacing in table1,
	replace file_chooser_frame with file_chooser_box to remove
	extra padding from around the file-chooser-button.
	 
	* screenshot-dialog.c: (screenshot_dialog_new):  Replace
	file_chooser_frame with file_chooser_box.
	 
2004-12-16  Vincent Noel  <vnoel@cox.net>

	* screenshot-dialog.c (screenshot_dialog_new): Use new
	GtkFileChooserButton API.

2004-11-10  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-screenshot.schemas.in, gnome-panel-screenshot.c: 
	Follow gconf naming standard.
	 
Wed Nov 10 01:15:02 2004  Jonathan Blandford  <jrb@redhat.com>

	* gnome-panel-screenshot.c: Save the last directory visited to