@@ -1,3 +1,10 @@
+Sun Aug 28 01:09:42 2005  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-panel-screenshot.c: (generate_filename_for_uri),
+	(prepare_screenshot), (get_desktop_dir), (load_options): Fix
+	crasher when we can't access the last saved dir for some reason,
+	#309731
+
 2005-08-21  Gustavo Noronha Silva  <kov@debian.org>
 
 	* gnome-panel-screenshot.c:
